# internal/adapters/dto/error.go
@@ -1,0 +1,6 @@
+package dto
+
+type ErrorResponse struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"Erro de validação"`
+}
